2007-10-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/rxvt.el (rxvt-alternatives-map): New map.
	(terminal-init-rxvt): Use it.
	Bind rxvt-function-map in input-decode-map.

	* term/xterm.el (xterm-alternatives-map): New map.
	(terminal-init-xterm): Use it.
	Bind xterm-function-map in input-decode-map.

	* term/x-win.el (x-alternatives-map): New var.
	(x-setup-function-keys): Use it.

	* help-fns.el (describe-variable): Slightly change the layout of
	meta-info to separate it better from the docstring.
	Standardize insertion of extra empty lines in various circumstances.

	* diff-mode.el (diff-hunk-style): New fun.
	(diff-end-of-hunk): Use it.
	(diff-context->unified): Use the new `apply' undo element,
	if applicable, so as to save undo-log space.
	(diff-fine-change): New face.
	(diff-fine-highlight-preproc): New function.
	(diff-fine-highlight): New command.
	(diff-mode-map, diff-mode-menu): Add diff-fine-highlight.

	* smerge-mode.el (smerge-refine-chopup-region): Add `preproc' argument.
	(smerge-refine-highlight-change): Add `props' argument.
	(smerge-refine-subst): New function holding most of smerge-refine.
	(smerge-refine): Use it.

2007-10-08  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-default-wash-log): Remove unused code, the
	log washers all live in the backends now.
	(vc-default-comment-history): Correct for the fact
	that wash-log is argumentless in the new API.

2007-10-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-find-foreign-file-name-handler): Check also host.
	(tramp-maybe-send-script): Apply `member' but `memq'.
	(tramp-advice-file-expand-wildcards): Simplify implementation.

2007-10-08  Juanma Barranquero  <lekktu@gmail.com>

	* follow.el (follow-mode): Don't run hooks twice.  Use `when'.

	* mb-depth.el (minibuf-depth-indicator-function): New variable.
	(minibuf-depth-setup-minibuffer): Use it.

2007-10-07  Glenn Morris  <rgm@gnu.org>

	* simple.el (bad-packages-alist): Clarify Semantic and CEDET